--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -25,8 +25,10 @@
 
 .site-nav {
   display: none;
+  width: 100%;
+  position: fixed;
   margin-bottom: 1em;
-  text-align: center;
+  padding: 0 2em;
 
   ul {
     display: block;
@@ -48,10 +50,16 @@
   a {
     display: block;
     padding: 0.5em 0.75em;
-    text-transform: uppercase;
+    text-transform: capitalize;
     text-decoration: none;
     border: 1px solid;
-    border-radius: $border-radius;
+    padding: 1em;
+    font-size: 22px;
+    font-weight: 600;
+    color: white;
+    &:hover{
+      opacity: 50%;
+    }
   }
 
   @include breakpoint($medium) {
@@ -117,13 +125,22 @@
 
 .site-footer {
   @include clearfix();
-  margin: 2em 0;
-  padding: 2em 0;
-  text-align: center;
-  border-top: 1px solid;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding-bottom: 1em;
+  padding-left: 2em;
 
-  .social-icons {
-    margin-bottom: 0.5em;
+  .footer-btn{
+    padding: 1em;
+    font-size: 22px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    &:hover{
+      opacity: 50%;
+    }
+  
   }
 
   .social-icon {
