--- a/_sass/so-simple/_page.scss
+++ b/_sass/so-simple/_page.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 .page-wrapper {
-  margin: 0 auto;
+  margin: 0 260px;
   padding-left: 1em;
   padding-right: 1em;
   max-width: $main-sidebar-max-width;
