--- a/assets/css/skins/default.scss
+++ b/assets/css/skins/default.scss
@@ -7,8 +7,8 @@
 @import "so-simple/variables";
 @import "so-simple/notices";
 
-/* Colors */
-$base-color: #000 !default;
+/* Colors */    
+$base-color: #fff !default;
 $text-color: #000 !default;
 $accent-color: #34374C !default;
 $nav-color: #fff !default;
